--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -153,10 +153,13 @@ li.nav-item.dropdown {
   border: 1px solid black;
   padding: 1rem;
   border-radius: .5rem;
-  display: inline-block;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  text-transform: capitalize; }
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; }
   .panel-card-link:hover {
     color: white;
     text-decoration: none;
