--- a/public/styles/sass/_admin_panel.scss
+++ b/public/styles/sass/_admin_panel.scss
@@ -13,16 +13,22 @@
   border: 1px solid black;
   padding: 1rem;
   border-radius: .5rem;
-  display: inline-block;
   margin-top: 1rem;
   margin-bottom: 1rem;
   text-transform: capitalize;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
 
   &:hover{
     color: white;
     text-decoration: none;
     background: rgba(0, 0, 0, 0.64);
   }
+
 
 
 
